[workspace]
members = ["api", "configuration", "domain"]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"